@@ -193,12 +193,17 @@ function html_print_select_groups($id_user = false, $privilege = "AR", $returnAl
 		unset($user_groups[$id_group]);
 	}
 
-	// First group it's needed to retrieve its parent group
-	$first_group = array_slice($user_groups, 0, 1);
-	$parent_group = $first_group[0]['parent'];
-	
-	$user_groups_tree = groups_get_groups_tree_recursive($user_groups, $parent_group);
-	
+	if(empty($user_groups)) {
+		$user_groups_tree = array();
+	}
+	else {
+		// First group it's needed to retrieve its parent group
+		$first_group = array_slice($user_groups, 0, 1);
+		$parent_group = $first_group[0]['parent'];
+		
+		$user_groups_tree = groups_get_groups_tree_recursive($user_groups, $parent_group);
+	}
+
 	$fields = array();
 	foreach ($user_groups_tree as $group) {
 		if (isset($config['text_char_long'])) {
