@@ -1,5 +1,10 @@
 2011-07-19  Sergio Martin <sergio.martin@artica.es>
 
+	* include/functions_html.php: Fixed check when no 
+	agents for bug 3371316
+
+2011-07-19  Sergio Martin <sergio.martin@artica.es>
+
 	* include/functions_graph.php
 	include/graphs/functions_fsgraph.php
 	include/graphs/fgraph.php
